--- a/app/assets/stylesheets/slideshow.css.scss
+++ b/app/assets/stylesheets/slideshow.css.scss
@@ -345,6 +345,11 @@ img {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+
+	.roundavatar_file {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .roundbutton {
